include_directories ("${PROJECT_SOURCE_DIR}/include")
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} SRC)
foreach(file IN LISTS SRC)
  string(REGEX MATCH "(([a-z]|[A-Z]|[0-9]|_)*\\.c)$" file_ext ${file})
  string(REGEX MATCH "^(([a-z]|[A-Z]|[0-9]|_)*)" file_name ${file_ext})
  message(STATUS "${file} -> ${file_ext} -> ${file_name}")
  add_library(${file_name} ${file_ext})
endforeach(file)
